tests/sksl/errors/golden/BadFieldType.glsl
### Compilation failed:

error: 3: not a function
error: 4: type mismatch: '=' cannot operate on 'float', 'bool3'
error: 5: too many components in swizzle mask 'missing'
error: 6: expected array, but found 'float'
4 errors
